--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ h3 {
   align-items: center;
   padding: 20px 0;
   border-bottom: 1px solid #e6e6e6;
-  margin-bottom: 60px;
+  margin-bottom: 45px;
 }
 
 .header ul {
@@ -78,7 +78,7 @@ h3 {
 .heading {
   font-size: 2rem;
   font-weight: 700;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   padding: 0 20px;
 }
 
@@ -112,6 +112,7 @@ h3 {
 .content {
   width: 70%;
   margin: 0 auto;
+  padding-bottom: 10px;
 }
 
 .form-group {
@@ -133,6 +134,11 @@ h3 {
   text-align: left;
   display: block;
   margin: 0 0 5px 3px;
+}
+
+.form-group h4{
+  text-align: left;
+  margin: 5px 0;
 }
 
 .btn {
