--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
 
 * {
@@ -10,7 +14,7 @@ body {
   font-family: 'Poppins', sans-serif;
   height: 100vh;
 }
-
+/* 
 a {
   text-decoration: none;
   color: #000;
@@ -235,4 +239,4 @@ h3 {
   .heading p {
     font-size: 1.5rem;
   }
-}
+} */
